# stm32boot

./: .bumpversion.cfg  .flake8  .gitignore  .readthedocs.yaml  README.md  README.rst  donjon.py  pyproject.toml  requirements.txt  stm32boot.py
.github/workflows/: integration.yml  pylint.yml  python-app-int.yml  python-app-integration.yml  python-app.yml  python-int.yml
daughter-board/: .gitignore  README.md
daughter-board/AtMega328p/: AtMega328p.kicad_pcb  AtMega328p.kicad_pro  AtMega328p.kicad_sch  AtMega328p.kicad_sch-bak
daughter-board/AtMega328p/gerber/: AtMega328p-B_Mask.gbr  AtMega328p-B_Paste.gbr  AtMega328p-B_Silkscreen.gbr  AtMega328p-Edge_Cuts.gbr  AtMega328p-F_Mask.gbr  AtMega328p-F_Paste.gbr
daughter-board/stm32l462/: stm32l462.kicad_pcb  stm32l462.kicad_pro  stm32l462.kicad_sch  ~stm32l476.kicad_sch.lck
daughter-board/stm32l476/: stm32l476.kicad_pcb  stm32l476.kicad_pro  stm32l476.kicad_sch
daughter-board/stm32l476/gerber/: stm32l476-B_Cu.gbr  stm32l476-F_Cu.gbr  stm32l476-F_Silkscreen.gbr
docs/api/source/: api.rst  bootloader.rst  cli.rst  conf.py  examples.rst  index.rst
docs/docs/api/source/: conf.py  index.rst
firmwares/: ceval_stm32l462_0.1.0.hex  ceval_stm32l476_0.1.0.hex  ceval_stm32l4xx.hex  zephyr_stm32l476rg.hex
scripts/api/: connect.py  erase.py  info.py  load.py  protection.py  read.py  test.hex
scripts/ceval/: README.md  ceval_stm32l4xx.py  ceval_stm32l4xx.yaml  requirements.txt
stm32boot/: __init__.py  __main__.py  boot.py  bootloader.py  cli.py  devices.py  main.py  schema.py
stm32boot/data/: stm32_0x415.yml  stm32_0x450.yml  stm32_0x451.yml  stm32_0x460.yml  stm32_0x462.yml
stm32boot/subcommands/: __init__.py  commands.py  donjon.py
stmloader/: __main__.py  boot.py  bootloader.py  devices.py
stmloader/data/: stm32_0x415.yml  stm32_0x450.yml  stm32_0x451.yml  stm32_0x462.yml
tests/: test_cli.py  test_devices_cli_args.py  test_int_loader_read.py  test_int_loader_reset.py  test_loader_cli_args.py  test_unit_devices_cli_args.py  test_unit_loader_cli_args.py
tests/data/: desc_bootloader_id_empty.yml  desc_miss_bad_type.yml  desc_miss_id.yml  desc_name_null.yml  desc_pagesize_empty.yml
